# FluidSpectraIG

./: .gitignore  Makefile  README.md  arnoldi_iteration.py  gen_sparse_matrices.py  laplacian_g_invert.py  masks.py  mfeigen_torch.py  mkdocs.yml  nma.py  pyproject.toml
examples/: calculate_eigenpairs.sh  calculate_spectra.py  constantvelocity_squaredomain.py  mitgcm-100-z75.py  mitgcm-squarebasin-test.py  mitgcm_squarebasin-test_spectra.py  mqgeometry_doublegyre-octagon.py  mqgeometry_doublegyre-squarebasin.py  mqgeometry_spectra.py  spectra.sh  tuml_spectra.py  tuml_squaredomain.py
slepc/: Makefile  laplacian_modes.c
src/fluidspectraig/: __init__.py  elliptic.py  fd.py  helmholtz.py  mfeigen_torch.py  mfkrylov_torch.py  mfpcg_torch.py  mitgcm.py  nma.py  splig.py  tuml.py
test/: arnoldi_iteration.py  eigenmode_preconditioner.py  eigenmodes_circularbasin.py  eigenmodes_irregularcoast.py  eigenmodes_octagonalbasin.py  eigenmodes_squarebasin.py  eigenmodes_squarebasin_hr.py  eigenmodes_squarebasin_vhr.py  laplacian_c_invert_dct.py  laplacian_c_invert_pcg.py  laplacian_c_invert_pminres.py  laplacian_g_invert.py  laplacian_g_invert_dst.py  laplacian_g_invert_pcg.py  laplacian_g_invert_pminres.py
