[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidspectraig"
version = "0.0.1"
authors = [
  { name="Joe Schoonover", email="joe@fluidnumerics.com" },
]
description = "Tools for computing spectra of fluids in irregular geometry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fluidnumerics/fluidspectraig"
Issues = "https://github.com/fluidnumerics/fluidspectraig/issues"